# rustini

./: Cargo.toml  LICENSE  Makefile  README.md
src/: ini.rs  lib.rs  libini.rlib  main.rs  test.ini
test/: bad_title.ini  missing_end.ini  normal.ini
