[package]
name = "rustini"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE.mit"
description = "An INI parser for Rust"
homepage = "https://github.com/kodeschreiber/rustini"
documentation = "README.md"
repository = "https://github.com/kodeschreiber/rustini"
readme = "README.md"
keywords = ["ini", "parser"]
categories = ["config", "data-structures", "filesystem", "parser-implementations", "parsing"]

exclude = [
    "test/*",
    ".gitignore",
    "Makefile",
]

[dependencies]
